<resources>
    <string name="app_name">FileDownloader Demo</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="delete">Delete</string>

    <string name="del_cache_files">Delete all downloaded files</string>
    <string name="del_file_error_empty">Empty folder already</string>

    <string name="single_task_test_title">Single task test</string>
    <string name="performance_test_title">Performance test</string>
    <string name="performance_test_parcel">100000(times) Basic performance test</string>
    <string name="performance_test_output">Output performance test</string>


    <string name="tasks_manager_demo_title">Tasks Manager Demo</string>
    <string name="tasks_manager_demo_name" formatted="false">task: %d</string>
    <string name="tasks_manager_demo_status_loading">Status: loading...</string>
    <string name="tasks_manager_demo_status_pending">Status: pending</string>
    <string name="tasks_manager_demo_status_started">Status: started</string>
    <string name="tasks_manager_demo_status_connected">Status: connected</string>
    <string name="tasks_manager_demo_status_progress">Status: progressing</string>
    <string name="tasks_manager_demo_status_downloading" formatted="false">Status: downloading %d</string>
    <string name="tasks_manager_demo_status_error">Status: error</string>
    <string name="tasks_manager_demo_status_paused">Status: paused</string>
    <string name="tasks_manager_demo_status_completed">Status: completed</string>
    <string name="tasks_manager_demo_status_not_downloaded">Status: has not downloaded</string>

    <!-- hybrid test -->
    <string name="hybrid_test_title">Hybrid test</string>
    <string name="hybrid_test_deleted_file" formatted="false">Deleted: %s</string>
    <string name="hybrid_test_start_single_task" formatted="false">Start single task: %s</string>
    <string name="hybrid_test_start_multiple_tasks_parallel" formatted="false">Start %d tasks to download in parallel</string>
    <string name="hybrid_test_start_multiple_tasks_serial" formatted="false">Start %d tasks to download linearly</string>
    <string name="hybrid_test_multiple_tasks_parallel_title">Execute multiple tasks in parallel</string>
    <string name="hybrid_test_multiple_tasks_serial_title">Execute multiple tasks linearly</string>
    <string name="hybrid_test_single_task_title">Execute single task</string>
    <string name="avoid_missing_screen_frames">Avoid Missing Screen Frames</string>

    <!-- notification demo -->
    <string name="notification_demo_title">Notification Demo</string>

    <string name="notification_sample_title">Notification Sample Demo</string>
    <string name="notification_sample_desc">This is notification sample demo, in this demo, we show the downloading information in the notification panel and Activity. Every downloading task has a notification item in the notification panel and we will hold them after finishing download. In the meantime, there is a indeterminate progress bar in the activity to indicate the whole process of download.</string>
    <string name="notification_sample_show">Show the Notification</string>

    <string name="notification_min_set_title">Notification MinSet Demo</string>
    <string name="notification_min_set_desc">This is notification min set demo, it means that we use as little as possible code to bind notification with downloading tasks.</string>

    <!-- multitask test -->
    <string name="multitask_test_title">Multiple tasks test</string>

</resources>
