<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_btn_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/start"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/pause_btn_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/pause"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/delete_btn_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/delete"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_btn_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/start"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/pause_btn_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/pause"
            android:textColor="#000000"
            android:textSize="14sp" />

        <Button
            android:id="@+id/delete_btn_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/delete"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp" />
</LinearLayout>